[package]
name = "chess-app"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

leptos = { version = "0.8", features = ["csr"], optional = true }
leptos_router = { version = "0.8", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
axum = { version = "0.8.8", features = ["ws"], optional = true }
tokio = { version = "1.49.0", features = ["full"], optional = true }
tower-http = { version = "0.6.8", features = ["fs", "cors"], optional = true }

[features]
hydrate = ["leptos", "leptos_router", "wasm-bindgen", "console_error_panic_hook"]
axum = ["dep:axum"]
tokio = ["dep:tokio"]
tower-http = ["dep:tower-http"]

[lib]
crate-type = ["cdylib", "rlib"]
