[package]
name = "chess-app"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


#fronend
leptos = { version = "0.8", features = ["csr"], optional = true }
leptos_router = { version = "0.8", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

#backend
axum = { version = "0.8.8", features = ["ws"], optional = true }
tokio = { version = "1.49.0", features = ["full"], optional = true }
tower-http = { version = "0.6.8", features = ["fs", "cors"], optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true }
futures-util = { version = "0.3.31", optional = true }
uuid = { version = "1.19.0", features = ["v4"], optional = true }

[features]
hydrate = ["leptos", "leptos_router", "wasm-bindgen", "console_error_panic_hook"]
axum = ["dep:axum"]
tokio = ["dep:tokio"]
tower-http = ["dep:tower-http"]
tracing = ["dep:tracing"]
tracing-subscriber = ["dep:tracing-subscriber"]
ssr = ["axum", "tokio", "tower-http", "tracing", "tracing-subscriber"]
futures-util = ["dep:futures-util"]
uuid = ["dep:uuid"]

[[bin]]
name = "server"
path = "src/main.rs"
required-features = ["ssr"]

[lib]
crate-type = ["cdylib", "rlib"]
