[package]
name = "chess-app"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# fronend
leptos = { version = "0.8", features = ["csr"], optional = true }
leptos_router = { version = "0.8", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent"], optional = true }

# backend
axum = { version = "0.8", features = ["ws"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
uuid = { version = "1.6", features = ["v4"], optional = true }

[features]
hydrate = ["leptos", "leptos_router", "wasm-bindgen", "console_error_panic_hook",  "web-sys"]
ssr = ["axum", "tokio", "tower-http", "tracing", "tracing-subscriber", "futures-util", "uuid"]

[[bin]]
name = "server"
path = "src/main.rs"
required-features = ["ssr"]

[lib]
crate-type = ["cdylib", "rlib"]
